fix post width overflow

--- a/post/post-detail.style.css
+++ b/post/post-detail.style.css
@@ -165,6 +165,10 @@
   padding: 0 0 0 2.5rem;
 }
 
+.reference-list__link {
+  display: inline-block;
+}
+
 .reference-list__item_selected {
   background-color: rgba(255, 255, 255, 0.1);
 }
@@ -186,10 +190,6 @@
   display: inline-flex;
   gap: 0.15rem;
   margin: 0 0.25rem 0 0;
-}
-
-.reference-list {
-  max-width: 100%;
 }
 
 @media screen and (min-width: 600px) {
